Poprawka TrainingService, encje i DTO; zaktualizowane calculateTiS i statystyki treningów